# NutrifyMe-R.A.G.-Retrieval-Augmented-Generation-

./: .gitignore  README.md  pyproject.toml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: mysql_to_s3_dag.py
notebook/: Code_Backups.py  Food_Facts_Python_Data_Processing.ipynb  Groq_LLM.py  Health_Embed.py  Nutrition_Embed.py  Reference_Range_Embed.py  Snowflake_Connector.py  app.py  build_all.py  build_health_db.py  build_nutrition_db.py  build_profile_db.py  build_reference_db.py  context_builder.py  health_embed_utils.py  main.py  nutrition_embed_utils.py  nutrition_retriever.py  profile_matcher_file.py  profile_summary.py  query_health.py  query_nutrition.py  query_reference.py  query_retriever.py  reference_embed_utils.py  reference_loader.py  run_embeddings.py  store_embed_csv.py  user_db.py  user_query.py
